2006-01-13  Bruno coudoin  <bruno.coudoin@free.fr>

	Reviewed crane drawing, the arrow used to control
	the crane are now bigger.

	* boards/crane/arrow_b.png:
	* boards/crane/arrow_l.png:
	* boards/crane/arrow_r.png:
	* boards/crane/arrow_u.png:
	* boards/crane/crane-bg.png:
	* src/boards/crane.c:

2006-01-13  Bruno coudoin  <bruno.coudoin@free.fr>

	Bulb is smaller now

	* boards/electric/bulb1.png:
	* boards/electric/bulb10.png:
	* boards/electric/bulb11.png:
	* boards/electric/bulb12.png:
	* boards/electric/bulb2.png:
	* boards/electric/bulb3.png:
	* boards/electric/bulb4.png:
	* boards/electric/bulb5.png:
	* boards/electric/bulb6.png:
	* boards/electric/bulb7.png:
	* boards/electric/bulb8.png:
	* boards/electric/bulb9.png:
	* src/boards/python/electric.py:

2006-01-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Many component are smaller now.
	More will follow.

	* boards/electric/battery.png:
	* boards/electric/diode.png:
	* boards/electric/resistor.png:
	* boards/electric/resistor_track.png:
	* boards/electric/resistor_wiper.png:
	* src/boards/python/electric.py:

2006-01-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Minor feature enhancement, now in delete mode, a click on a 
	component in the selector change the tool to select mode.

	* src/boards/python/electric.py:

2006-01-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Remade searace icons from image in openclipart.org
	Added support for Chinese Traditional by Wei-Lun Chao
	Added delete tool in electric.
	
	* boards/boardicons/README:
	* boards/boardicons/searace.png:
	* boards/boardicons/searace1player.png:
	* configure.in:
	* docs/gcompris2spip.pl:
	* po/ChangeLog:
	* po/zh_TW.po:
	* src/boards/python/electric.py:
	* src/gcompris/config.c:

2006-01-08  Bruno coudoin  <bruno.coudoin@free.fr>

	Added the component selector. Created icons.

	* boards/electric/battery_icon.png:
	* boards/electric/bulb_icon.png:
	* boards/electric/connect_icon.png:
	* boards/electric/diode.png: